--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ table {border-collapse: collapse;border-spacing: 0;}
 */
 button {background: none;border: none;padding: 0;}
 body{position: relative;font-family: sans-serif;line-height:1.5;}
+figure{margin: 0;}
+h4{margin: 0;}
 /* GENRAL */
 #main_header{background-color: white; padding: 12px;box-shadow: 1px 4px 8px rgba(0,0,0,0.5);position: fixed;top: 0;left: 0;right: 0;z-index: 3;}
 .flex-container{display:flex; gap: 12px; justify-content:space-between;align-items: center;}
@@ -36,6 +38,11 @@ body{position: relative;font-family: sans-serif;line-height:1.5;}
 .menu{width: 48px;height: 48px;}
 .main_heading{font-size: 24px;line-height:28px;font-weight: 700;}
 
+.header_fig{margin: 0;padding:0;display: flex;align-items:center;gap: 8px;}
+.header_figcaption{text-align: center;font-size: 14px;}
+.header_fig_heading{font-weight: 700;}
+.header_fig_heading .smaller{font-size: 12px;font-weight: 300;}
+
 #main_drawer{
 	position: fixed;top: 8vh;right: 0;overflow: hidden;
 	padding: 16px 0;height: calc(100vh - 12vh);width:0;background-color: rgba(0, 0, 0, 0.7);
@@ -43,10 +50,16 @@ body{position: relative;font-family: sans-serif;line-height:1.5;}
 }
 #main_drawer.opened_menu{width: 100vw;}
 
-.main_menu{background-color: pink;
+.main_menu{background-color: white;
 	max-width: 60%;margin: 0 0 0 auto;text-align: right;
 	height:100%;
 	list-style:none;display:flex;flex-direction: column;gap: 16px;padding: 16px 16px 0 0;}
 .menu_item a{color: black;text-decoration: none;white-space: nowrap;}
 
 .category{display:block;}
+
+.article_fig{border: 1px solid red;}
+.image_frame{position: relative;aspect-ratio:16 / 9;}
+
+.article_fig img{width:100%;height:auto;object-fit: cover;}
+.article_figcaption{padding:12px;}
