--- a/excercise-two/css/style.css
+++ b/excercise-two/css/style.css
@@ -1,6 +1,7 @@
 :root{
 	--dark: #000a12;
-	--light: #afafaf;
+	--light: #efefef;
+	--bg: #212549;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -24,7 +25,7 @@ blockquote:before, blockquote:after,
 q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 button {background: none;border: none;padding: 0;}
-body{position: relative;font-family:'Space Grotesk', sans-serif;line-height:1.5;color: var(--light);background-color: black;padding: 20px;}
+body{position: relative;font-family:'Space Grotesk', sans-serif;line-height:1.5;color: var(--light);background-color: black;padding:0;}
 a{color: var(--light);text-decoration: none;}
 figure{margin: 0;}
 h4{margin: 0;}
@@ -35,13 +36,44 @@ h1, h2, h3, h4, h5, h6{ font-family: 'Newsreader', serif; font-weight: 700;}
 
 
 /*Header*/
-.main_header{display: flex;flex-direction: row;justify-content:space-between;align-items:center;}
+.main_header{display: flex;flex-direction: row;justify-content:space-between;align-items:center;padding: 20px;}
 .header_icon img{width: 20px;height: 20px;object-fit: contain;}
 .nav_list{display: flex;gap: 20px;}
 .nav_list li{font-size:1.3em;}
 .nav_list li a{font-size:.8em;}
+.header_right{display: flex;flex-direction: row;gap: 32px;}
+
+.the_body{
+	background-color: var(--bg);background-image: url(../assets/last-of-us-wallpaper-1920x1080-for-mobile-hd.jpg);
+	background-repeat: no-repeat;background-position: 20vw center;background-size: cover;
+	display: grid;grid-template-rows: auto 1fr auto;min-height: 100vh;
+}
 
 /*Footer*/
+.main_footer{padding: 20px;}
 .half_container{max-width: 50%;justify-content: space-between;}
 
-.btn_play{border: 1px solid var(--light);display: grid;align-content: center;}
+.play-section{align-items:center;gap: 30px;margin-top: 32px;}
+.btn_play{border: 1px solid var(--light);border-radius: 50%;display: inline-block;width: 50px;height:50px;}
+
+.section_container{padding: 24vh 10vw;}
+.pub_number{font-size: 1.7em;}
+.main_heading{font-size: 3.3em;}
+.section_container p{font-size: 14px;line-height:1.6;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
