--- a/excercise-two/css/style.css
+++ b/excercise-two/css/style.css
@@ -53,6 +53,8 @@ h1, h2, h3, h4, h5, h6{ font-family: 'Newsreader', serif; font-weight: 700;}
 .main_footer{padding: 20px;}
 .half_container{max-width: 50%;justify-content: space-between;}
 
+
+/*body*/
 .play-section{align-items:center;gap: 30px;margin-top: 32px;}
 .btn_play{border: 1px solid var(--light);border-radius: 50%;display: inline-block;width: 50px;height:50px;}
 
