--- a/digital-poster/css/style.css
+++ b/digital-poster/css/style.css
@@ -3,17 +3,23 @@
    License: none (public domain)
 */
 :root{
-	--primary: #67002d;
-	--secondary: #a10046;
-	--accent: #fffa73;
-	--light: #1583B3;
-	--dark: #003751;
-	--lighter: #efefef;
+	--primary: #6d0c0b;
+	--primaryLight: #CA5452;
+	--secondary: #01c067;
+	--light: #efefef;
+	--dark: #222222;
+	--darkest: #000a12;
 }
+
+/*
+	Font for numbers
+	font-family: 'bankgothic_md_btmedium';
+*/
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
+del, dfn, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
@@ -32,45 +38,39 @@ blockquote, q {quotes: none;}
 blockquote:before, blockquote:after,
 q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
-p{line-height:1.5;}
-h1, h2{font-family: 'Ibarra Real Nova', serif;}
+p{line-height:1.5;margin-bottom: 20px;font-size: .8em;}
+h3{font-size: 1.3em;margin-bottom: 16px;font-weight: 500;line-height:1.2;}
+h4{font-size: 1.1em;margin-bottom: 12px;font-weight: 500;line-height:1.3;}
 
+/*scrollbars*/
 /* width */
-body::-webkit-scrollbar {
-  width: 5px;
-}
-
+body::-webkit-scrollbar {width: 5px;}
 /* Track */
-body::-webkit-scrollbar-track {
-  background: var(--primary);
-}
-
+body::-webkit-scrollbar-track {background: var(--primary);}
 /* Handle */
-body::-webkit-scrollbar-thumb {
-  background: var(--secondary);
-}
-
+body::-webkit-scrollbar-thumb {background: var(--secondary);}
 /* Handle on hover */
-body::-webkit-scrollbar-thumb:hover {
-  background: var(--accent);
-}
+body::-webkit-scrollbar-thumb:hover {background: var(--accent);}
 
-#the_body{background-color: var(--dark);color: var(--lighter);font-family: 'Montserrat', sans-serif;}
-.main_header{box-shadow: 0 4px 8px rgba(0,0,0,0.4);padding: 12px;position: fixed;left: 0;top: 0;width:100%;background-color: var(--primary);}
+#the_body{background-color: var(--dark);color: var(--light);font-family:'Barlow Condensed', sans-serif;}
+.main_header{box-shadow: 0 4px 8px rgba(0,0,0,0.4);padding: 12px;position: fixed;left: 0;top: 0;width:100%;background-color: var(--darkest);}
 
 #main_wrapper{padding: 92px 8px 0 8px;max-width: 1280px;margin: 0 auto;}
-.main_heading{font-size: 3em;}
+.main_heading{font-size: 3em;font-weight: 800;}
+.main_heading span{color: var(--secondary);}
+.sub_heading{font-size: 2em;margin-bottom: 20px;font-weight: 500;}
+
 #main_section img{width: 100%;height: auto;aspect-ratio: 1 / 1;object-fit: cover;}
 #main_section p{margin-bottom: 20px;}
+.red_text{color: var(--primaryLight);}
 
 .section_wrapper{margin-bottom: 40px;}
-.section_wrapper h2{font-size: 2em;margin-bottom: 20px;}
 
 .grid_container{display: grid;grid-template-columns: repeat(2, 1fr);grid-row-gap: 16px;grid-column-gap: 8px;}
 .grid_container .fig_graph:last-child{grid-column: 1 / span 2;}
 
 .fig_graph img{width:100%;height:auto;}
-.fig_grapth_caption h3{line-height: 1.5;}
+.fig_graph_caption h3{line-height: 1.5;}
 
 #main_footer{padding: 12px;}
 
@@ -78,7 +78,8 @@ body::-webkit-scrollbar-thumb:hover {
 .disclaimers{font-size: 12px;font-weight: 300;}
 
 
-
+.actual .square{position: relative;}
+.actual .square .fig_graph_caption{position: absolute;bottom: 0;left: 0;right: 0;}
 
 
 
