--- a/digital-poster/css/style.css
+++ b/digital-poster/css/style.css
@@ -55,7 +55,7 @@ body::-webkit-scrollbar-thumb:hover {background: var(--accent);}
 #the_body{background-color: var(--dark);color: var(--light);font-family:'Barlow Condensed', sans-serif;}
 .main_header{box-shadow: 0 4px 8px rgba(0,0,0,0.4);padding: 12px;position: fixed;left: 0;top: 0;width:100%;background-color: var(--darkest);}
 
-#main_wrapper{padding: 92px 8px 0 8px;max-width: 1280px;margin: 0 auto;}
+#main_wrapper{padding: 92px 8px 0 8px;max-width: 1440px;margin: 0 auto;}
 .main_heading{font-size: 3em;font-weight: 800;}
 .main_heading span{color: var(--secondary);}
 .sub_heading{font-size: 2em;margin-bottom: 20px;font-weight: 500;}
@@ -65,6 +65,7 @@ body::-webkit-scrollbar-thumb:hover {background: var(--accent);}
 .red_text{color: var(--primaryLight);}
 
 .section_wrapper{margin-bottom: 40px;}
+.section_wrapper a{color: var(--secondary);}
 
 .grid_container{display: grid;grid-template-columns: repeat(2, 1fr);grid-row-gap: 16px;grid-column-gap: 8px;}
 .grid_container .fig_graph:last-child{grid-column: 1 / span 2;}
@@ -72,14 +73,60 @@ body::-webkit-scrollbar-thumb:hover {background: var(--accent);}
 .fig_graph img{width:100%;height:auto;}
 .fig_graph_caption h3{line-height: 1.5;}
 
-#main_footer{padding: 12px;}
+.fig_graph.rect{border-top: 1px solid var(--primary);padding-top: 20px;margin-top:20px;}
+.fig_graph.rect .fig_graph_caption{margin-top: 20px;}
+
+#main_footer{padding: 12px;border-top: 1px solid var(--primary);}
 
 .flex_container{display: flex;justify-content: space-between;align-items: center;}
 .disclaimers{font-size: 12px;font-weight: 300;}
 
+/*Mapas scroller*/
+.flex-container{display: flex;flex-direction: row;justify-content: flex-start;align-items: center;gap: 12px;}
+.mapas_scroller{overflow-y: scroll;flex-wrap: nowrap;}
+.mapas_scroller .fig_mapa{width: calc(100% - 24px);flex-shrink: 0;}
 
-.actual .square{position: relative;}
-.actual .square .fig_graph_caption{position: absolute;bottom: 0;left: 0;right: 0;}
+/*Map_figure*/
+.fig_mapa .image_frame{background-color: var(--light);overflow: hidden;border-radius: 3px;}
+.fig_mapa .image_frame img{width: 90%; height: auto;}
+.mapa_caption{padding: 4px 8px 12px 8px}
+.mapa_caption h3{font-weight: 700;font-size: 1.2em;}
+
+.section_wrapper.conclusion{border-top: 1px solid var(--primary);padding-top: 20px;}
+.ref_list{list-style: disc;padding-left: 20px;}
+.ref_item{margin-bottom: 20px;}
+.ref_item a{color: var(--light);line-height: 1.5em;}
 
 
+@media only screen and (min-width: 540px){
+	.mapas_scroller .fig_mapa{width: calc(100% / 2 - 20px)}
+	p{line-height:1.5;margin-bottom: 20px;font-size: 1.1em;}
+	h3{font-size: 1.4em;margin-bottom: 16px;font-weight: 500;line-height:1.3;}
+	h4{font-size: 1.2em;margin-bottom: 12px;font-weight: 500;line-height:1.4;}
+}
+@media only screen and (min-width: 720px){
+	.mapas_scroller .fig_mapa{width: calc(100% / 3 - 20px)}
+	.flex-container-desk{display: flex;flex-direction: row; justify-content: flex-start;align-items:center;gap: 40px;}
+	.fig_graph.square{flex-shrink: 0;max-width: 50%;}
+	.context_section p{max-width: 80%;}
 
+	.column_wrapper{column-count: 2;margin-bottom: 20px;}
+	#referencias .flex-container-desk{align-items:flex-start;}
+}
+@media only screen and (min-width: 1024px){
+	.section_wrapper p{max-width: 70%;flex-shrink: 1;}
+	.column_wrapper{column-count: 1;}
+	#main_wrapper{padding-left:16px;padding-right: 16px;}
+}
+@media only screen and (min-width: 1100px){
+	#main_section img{max-width: 80%;margin: 0 auto;display: block;}
+	.column_wrapper{column-count: 2;column-gap: 20px}
+	p{font-size: 1.3em;line-height:1.5;margin-bottom: 20px;}
+	h3{font-size: 1.6em;margin-bottom: 16px;font-weight: 500;line-height:1.3;}
+	h4{font-size: 1.4em;margin-bottom: 12px;font-weight: 500;line-height:1.4;}
+}
+@media only screen and (min-width: 1280px){
+	p{font-size: 1.5em;line-height:1.5;margin-bottom: 20px;}
+	h3{font-size: 1.8em;margin-bottom: 16px;font-weight: 500;line-height:1.3;}
+	h4{font-size: 1.6em;margin-bottom: 12px;font-weight: 500;line-height:1.4;}
+}
